tests/ui/impl-trait/in-trait/object-safety.current.stderr
error[E0038]: the trait `Foo` cannot be made into an object
  --> $DIR/object-safety.rs:20:33
   |
LL |     let i = Box::new(42_u32) as Box<dyn Foo>;
   |                                 ^^^^^^^^^^^^ `Foo` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/object-safety.rs:10:22
   |
LL | trait Foo {
   |       --- this trait cannot be made into an object...
LL |     fn baz(&self) -> impl Debug;
   |                      ^^^^^^^^^^ ...because method `baz` references an `impl Trait` type in its return type
   = help: consider moving `baz` to another trait

error[E0038]: the trait `Foo` cannot be made into an object
  --> $DIR/object-safety.rs:23:13
   |
LL |     let s = i.baz();
   |             ^^^^^^^ `Foo` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/object-safety.rs:10:22
   |
LL | trait Foo {
   |       --- this trait cannot be made into an object...
LL |     fn baz(&self) -> impl Debug;
   |                      ^^^^^^^^^^ ...because method `baz` references an `impl Trait` type in its return type
   = help: consider moving `baz` to another trait

error[E0038]: the trait `Foo` cannot be made into an object
  --> $DIR/object-safety.rs:20:13
   |
LL |     let i = Box::new(42_u32) as Box<dyn Foo>;
   |             ^^^^^^^^^^^^^^^^ `Foo` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/object-safety.rs:10:22
   |
LL | trait Foo {
   |       --- this trait cannot be made into an object...
LL |     fn baz(&self) -> impl Debug;
   |                      ^^^^^^^^^^ ...because method `baz` references an `impl Trait` type in its return type
   = help: consider moving `baz` to another trait
   = note: required for `Box<u32>` to implement `CoerceUnsized<Box<dyn Foo>>`
   = note: required by cast to type `Box<dyn Foo>`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0038`.
